--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/AppTheme"
-        android:name="DBController.Userdata">
+        android:name=".DBController.Userdata">
         <activity
             android:name=".StartActivity"
             android:screenOrientation="portrait">
